package com.rasp.utils.protobuf;

option java_package          = "com.rasp.mr";
option java_outer_classname  = "SJobNode";
option java_generic_services = true;

message KeyPacket
{
    required string key = 1;
}

message TransferResponse
{
    optional string status = 1;
}

service KeyPacketService
{
    rpc sendKey(KeyPacket) returns (TransferResponse);
}